fix tab widths on mobile

--- a/covid19stats.css
+++ b/covid19stats.css
@@ -120,7 +120,7 @@ header h1 {
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 14px 16px;
+  padding: 14px 0;
   font-size: 17px;
   width: 33.33333%;
   transition: 0.3s;
